# MC656

./: .gitignore  CONTRIBUTORS.md  README.md  REQUIREMENTS.md
.github/workflows/: build.yml
marketplace/: db.sqlite3  pyproject.toml
marketplace/accounts/: landing_views.py  tests.py  urls.py  validators.py  views.py
marketplace/accounts/templates/accounts/: landing.html  login.html  signup.html
marketplace/books/: ISBN_DECISION_TABLE.md  admin.py  models.py  search_strategies.py  test_isbn_smoke.py  test_isbn_unit1_utils.py  test_isbn_unit2_model.py  test_isbn_unit3_api.py  tests.py  urls.py  utils.py  views.py
marketplace/books/migrations/: 0001_initial.py  0002_book_isbn.py
marketplace/books/templates/books/: base.html  book_list.html  register_book.html  search_books.html
marketplace/bookshelves/: models.py  tests.py  urls.py  views.py
marketplace/bookshelves/migrations/: 0001_initial.py  0002_bookshelfitem_tag.py  0003_alter_bookshelfitem_tag.py  0004_convert_tag_data.py
marketplace/bookshelves/templates/bookshelves/: bookshelf.html
marketplace/donations/: models.py  tests.py  urls.py  views.py
marketplace/donations/migrations/: 0001_initial.py
marketplace/donations/templates/donations/: _nav_toggle.html  my_listings.html  pending_requests.html
marketplace/marketplace/: settings.py  urls.py
